--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
                  <div class="div-three">
 <div class="div-three-one">
     <img class="img-one" src="Flower Asset/pngwing 5.png" alt="bucket">
-   <h4 style="text-align:justify;"><u>Pink Flower Tree</u></h4>
+   <h4 style="text-align:justify; padding-left: 60px;"><u>Pink Flower Tree</u></h4>
 </div>
           <div class="div-three-one">
             <img class="img-two" src="Flower Asset/pngwing 7.png" alt="sunflower">  
-            <h4 style="text-align:justify;"><u>Pink Flower Tree</u></h4>
+            <h4 style="text-align:justify; padding-left: 60px;"><u>Pink Flower Tree</u></h4>
           </div>   
               <div class="div-three-one">
                 <img class="img-three" src="Flower Asset/pngwing 6.png" alt="lily"> 
-                <h4 style="text-align:justify;"><u>Pink Flower Tree</u></h4>
+                <h4 style="text-align:center;"><u>Pink Flower Tree</u></h4>
               </div>    
                 </div>
             </div>
     </section>
 
 
-<section class="section-ten">
+<section class="section-ten" style="margin-top: 35px;">
     <div class="div-ten">
         <img id="img-ten" src="Flower Asset/Group 57.png" alt="Delivery">
         <p>Same Day Delivery. Click and Collect.</p>
