--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="Flower Asset/Flower 01.png" type="image/x-icon">
 </head>
 <body>
+
+
     <section class="first-section">
         <article class="first-article">
 <h1 class="head-one">Let's make <br>beautiful flowers a <br>part of your life.</h1>
@@ -24,18 +26,22 @@
         <article class="second-article">
             <div class="first-div">
                 <h3 class="head-two">Our Feature Flowers</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim <br>quaerat saepe ad pariatur provident? Voluptas?</p>
+                <p style="font-size: 25px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim <br>quaerat saepe ad pariatur provident? Voluptas?</p>
             </div></article>
+
             <div class="sec-sec-div">
                  <div class="div-three">
-<div class="div-three-one">
-    <img class="img-one" src="Flower Asset/pngwing 5.png" alt="bucket">
-   <h4 style="text-align:justify; padding-left: 60px;"><u>Pink Flower Tree</u></h4>
-</div>
+  
+             <div class="div-three-one">
+               <img class="img-one" src="Flower Asset/pngwing 5.png" alt="bucket">
+              <h4 style="text-align:center; "><u>Pink Flower Tree</u></h4>
+              </div>
+
           <div class="div-three-one">
             <img class="img-two" src="Flower Asset/pngwing 7.png" alt="sunflower">  
-            <h4 style="text-align:justify; padding-left: 60px;"><u>Pink Flower Tree</u></h4>
+            <h4 style="text-align:center; "><u>Pink Flower Tree</u></h4>
           </div>   
+          
               <div class="div-three-one">
                 <img class="img-three" src="Flower Asset/pngwing 6.png" alt="lily"> 
                 <h4 style="text-align:center;"><u>Pink Flower Tree</u></h4>
@@ -45,7 +51,7 @@
     </section>
 
 
-<section class="section-ten" style="margin-top: 35px;">
+<section class="section-ten" style="margin-top: 35px; ">
     <div class="div-ten">
         <img id="img-ten" src="Flower Asset/Group 57.png" alt="Delivery">
         <p>Same Day Delivery. Click and Collect.</p>
