--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-
+<!-- First Section -->
     <section class="first-section">
         <article class="first-article">
 <h1 class="head-one">Let's make <br>beautiful flowers a <br>part of your life.</h1>
@@ -21,7 +21,7 @@
         </article>
     </section>
 
-
+<!-- Sceond Section -->
     <section class="second-section">
         <article class="second-article">
             <div class="first-div">
@@ -32,15 +32,15 @@
             <div class="sec-sec-div">
                  <div class="div-three">
   
-             <div class="div-three-one">
-               <img class="img-one" src="Flower Asset/pngwing 5.png" alt="bucket">
-              <h4 style="text-align:center; "><u>Pink Flower Tree</u></h4>
-              </div>
+               <div class="div-three-one">
+                 <img class="img-one" src="Flower Asset/pngwing 5.png" alt="bucket">
+                 <h4 style="text-align:center; "><u>Pink Flower Tree</u></h4>
+                 </div>
 
-          <div class="div-three-one">
-            <img class="img-two" src="Flower Asset/pngwing 7.png" alt="sunflower">  
-            <h4 style="text-align:center; "><u>Pink Flower Tree</u></h4>
-          </div>   
+                  <div class="div-three-one">
+                <img class="img-two" src="Flower Asset/pngwing 7.png" alt="sunflower">  
+                <h4 style="text-align:center; "><u>Pink Flower Tree</u></h4>
+               </div>   
           
               <div class="div-three-one">
                 <img class="img-three" src="Flower Asset/pngwing 6.png" alt="lily"> 
@@ -50,14 +50,18 @@
             </div>
     </section>
 
+<!-- 
+    Delivery Section
+ -->
 
-<section class="section-ten" style="margin-top: 35px; ">
+
+<section class="section-ten">
     <div class="div-ten">
         <img id="img-ten" src="Flower Asset/Group 57.png" alt="Delivery">
-        <p>Same Day Delivery. Click and Collect.</p>
+        <p>Same Day Delivery. <br>Click and Collect.</p>
     </div>
-    <div ><img   id="div-ten-one" src="Flower Asset/Group 58.png" alt="">
-    <p>Fresh Flowers. Local Grower</p>
+    <div class="div-ten"><img   id="div-ten-one" src="Flower Asset/Group 58.png" alt="">
+    <p>Fresh Flowers. <br>Local Grower.</p>
     </div>
     <div class="div-ten"><img src="Flower Asset/Group 59.png" alt="">
     <p>24/7 Free Support.</p>
