--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <article class="second-article">
             <div class="first-div">
                 <h3 class="head-two">Our Feature Flowers</h3>
-                <p style="font-size: 25px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim <br>quaerat saepe ad pariatur provident? Voluptas?</p>
+                <p id="sce-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim <br>quaerat saepe ad pariatur provident? Voluptas?</p>
             </div></article>
 
             <div class="sec-sec-div">
@@ -55,6 +55,7 @@
  -->
 
 
+
 <section class="section-ten">
     <div class="div-ten">
         <img id="img-ten" src="Flower Asset/Group 57.png" alt="Delivery">
@@ -69,18 +70,21 @@
 
 </section>
 
-
+<!-- Third-Section -->
 
     <section class="third-section">
         <article class="third-sec-art">
-            <br><br><br><br><h2>Hot Deal! Sale Up To 25% <span> OFF</span></h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi corporis <br>soluta vitae nesciunt, nihil maiores.</p>
+            <br><br><br><br><h2 class="header-two">Hot Deal! Sale Up To 25% <span> OFF</span></h2>
+            <p class="third-para-two">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi corporis <br>soluta vitae nesciunt, nihil maiores.</p>
             <button class="sec-btn">Sign Up</button>
         </article>
         <article class="third-sec-art-two">
             <img src="Flower Asset/pngwing 8.png" alt="buquit">
         </article>
     </section>
+
+
+<!-- Forth-section -->
 
 <section class="Forth-section">
     <article class="Forth-sec-art">
@@ -95,16 +99,23 @@
     </article>
 </section>
 
+
+<!-- Fifth-section -->
+
+
+
 <section class="Fifth-section">
   <div class="fifth-sec-div"><br><br><br><br><br> <h1>Get The Latest Deals</h1>
     <p>$30 coupon for first shopping</p>
     <input id="email-input" type="email" placeholder="Enter your email here...."><button >Subscribe</button></div>
 </section>
 
+<!-- Footer -->
+
 
 <footer class="footer-one">
     <h1><span id="span-one">Flower</span>Shop</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ullam <br>dolorem, at quasi iusto perspiciatis.</p>
+    <p id="para-foot">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ullam <br>dolorem, at quasi iusto perspiciatis.</p>
     <p id="para-foot">@2020-2023. FlowerShop.cpm. All right reserved.</p>
 </footer>
 </body>
